--- a/docker/requirements.txt
+++ b/docker/requirements.txt
@@ -26,8 +26,8 @@ MarkupSafe==2.1.1
 oauth2==1.9.0.post1
 oauthlib==2.0.0
 openapi-codec==1.3.2
-#pkg_resources==0.0.0
-#psycopg2==2.8.6
+pkg_resources==0.0.0
+psycopg2==2.8.6
 pycparser==2.21
 PyJWT==2.3.0
 pyparsing==3.0.7
